<resources>
    <!-- OnBoarding Activity -->
    <string name="error_message_intro">Current app version not available. Assuming normal app start.</string>
    <string name="app_name">KcalCulate</string>
    <string name="btn_finish"><b>Finish</b></string>

    <!-- Drawer Activity -->
    <string name="menu_news">News</string>
    <string name="menu_personal_data">Personal Data</string>
    <string name="menu_recipes">Recipes</string>
    <string name="language_english">English</string>
    <string name="language_spanish">Español</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log out</string>

    <!-- News Activity -->
    <string name="today">Today</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="sugar">Sugar</string>
    <string name="salt">Salt</string>
    <string name="fiber">Dietary Fiber</string>
    <string name="initialGrams">0 g</string>
    <string name="grams">g</string>
    <string name="kcal">Kcalories</string>
    <string name="add_meal">Add a meal</string>
    <string name="average">Average:</string>
    <string name="target">Target:</string>
    <string name="initial">0</string>
    <string name="ingredient">Ingredient</string>
    <string name="description">Description: </string>
    <string name="BASE_URL">https://www.themealdb.com/api/json/v1/1/</string>

    <!-- Meal Activity -->
    <string-array name="meal_array">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snacks</item>
        <item>Brunch</item>
    </string-array>

</resources>
