<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:maxWidth="320dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="130dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_83"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".87" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".7"
        app:srcCompat="@drawable/logo" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:layout_below="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_15"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:id="@+id/selectorNews"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tvNews"
                    style="@style/DrawerTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:text="@string/menu_news" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:id="@+id/selectorPersonalData"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tvPersonalData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:text="@string/menu_personal_data"
                    style="@style/DrawerTextStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:id="@+id/selectorRecipe"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tvRecipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:text="@string/menu_recipes"
                    style="@style/DrawerTextStyle" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/notificationsSwitch"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/tvCatalan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/language_english"
                android:padding="5dp"
                android:textColor="@drawable/selector_drawer_item"/>

            <View
                android:layout_width="1dp"
                android:layout_height="14dp"
                android:layout_gravity="center"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvSpanish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:text="@string/language_spanish"
                android:textColor="@drawable/selector_drawer_item" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/notificationsSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/divider_80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:singleLine="false"
                android:text="@string/notifications"
                android:textColor="@color/black" />
        </LinearLayout>

        <ImageView
            android:id="@+id/divider_80"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@id/userName" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="6dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/logOutLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/logOutLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginBottom="22dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_power"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/log_out"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
